Изменение router.go и example.go
